--- a/steam-home-page/css/master.css
+++ b/steam-home-page/css/master.css
@@ -69,6 +69,6 @@ a:hover {
 .time {
   width: 492px;
   height: 110px;
-  background-color: red;
+  background-color: green;
   margin-left: 50px;
 }
