--- a/steam-home-page/css/master.css
+++ b/steam-home-page/css/master.css
@@ -6,9 +6,10 @@ body {
   background-image: url(../img/wallpaper.jpg);
   background-repeat: no-repeat;
   width: 1100px;
-  height: 630px;
+  height: 580px;
   background-color: blue;
   margin: 0;
+  padding-top: 50px;
 }
 
 a {
@@ -38,6 +39,7 @@ a:hover {
   font-size: 15px;
   text-align: center;
   border-radius: 10px;
+  border: 1px solid white;
 }
 
 .text {
@@ -69,6 +71,5 @@ a:hover {
 .time {
   width: 492px;
   height: 110px;
-  background-color: green;
-  margin-left: 50px;
+  margin-left: 35px;
 }
