--- a/steam-home-page/css/master.css
+++ b/steam-home-page/css/master.css
@@ -73,3 +73,9 @@ a:hover {
   height: 110px;
   margin-left: 35px;
 }
+.time-de {
+  width: 291;
+  height: 25;
+  margin-left: 140px;
+  margin-top: 30px;
+}
