--- a/steam-home-page/css/master.css
+++ b/steam-home-page/css/master.css
@@ -5,8 +5,8 @@ html {
 body {
   background-image: url(../img/wallpaper.jpg);
   background-repeat: no-repeat;
-  width: 1100px;
-  height: 580px;
+  width: 1090px;
+  height: 570px;
   background-color: blue;
   margin: 0;
   padding-top: 50px;
@@ -95,12 +95,14 @@ input[type="text"] {
   opacity: 0.3;
   position: absolute;
   top: 70px;
-  left: 830px;
+  left: 820px;
   height: 30px;
   width: 200px;
   border-radius: 10px;
   padding-left: 5px;
   background-color: transparent;
+  color: white;
+  outline: none;
 }
 
 ::placeholder {
